<resources>
    <string name="app_name">Tiempo Joven</string>
    <string name="C5">
El tema que
abordaremos hoy
te va a interesar,
porque responde
a las inquietudes
más comunes y
profundas sobre
el sexo y el amor.
\n Quizá tengas
muchas preguntas
sobre este tema.
En tal caso,
deseamos que
encuentres aquí
algunas respuestas
generales, que
te ayuden a vivir
mejor y contribuyan
a tu felicidad.
\n Una publicación
especializada en la sexualidad afirma que el 90%
de lo que saben los adolescentes sobre la vida
sexual lo aprenden de sus amigos, no siempre bien
informados. No es extraño entonces que tanto
jóvenes y señoritas cometan diversos errores de
orden moral, mayormente debido a su falta de
correcta información. La intención de este capítulo es
evitar que eso también ocurra contigo. 
\n 
\n Qué tal si
comenzamos por
definir el amor?
\n Esto nos ayudará
a entender mejor
qué es y para qué
es el sexo.
\n El amor verdadero:
\n –no es un
sentimiento ciego y descontrolado.
\n –no es un impulso sujeto al dictado de los genitales
\n –no es egoísta.
\n El amor verdadero:
\n –está dispuesto a servir y a dar lo mejor de sí.
\n –es un estado del corazón, pero no divorciado de la razón.
\n –es limpio, comprensivo, tierno y respetuoso.
\n –es el factor sin el cual la relación sexual carece de atractivo.
\n –es un don de Dios y se nutre de Él.
\n \n A la luz de esta ideas, ¿no crees que el amor
(y también el sexo) es una fuerza que puede obrar
siempre a tu favor, si la sabes emplear con inteligencia?
\n \n <b>1 SEXO Y JUVENTUD</b>
\n  Las sagradas Escrituras tratan repetidamente el tema
del sexo. Aunque el gran Libro de Dios tiene como tema
central el amor divino (según lo vimos en la lección 3),
también trata con frecuencia el amor que debemos
expresarnos los seres humanos, incluyendo el sexo.
\n En sus páginas se menciona la sexualidad correcta, pero
también aparecen diversas desviaciones condenables,
tales como el incesto, la violación, la prostitución y la
desnaturalización del sexo.
\n ¿Qué dice este
Libro, la Biblia,
acerca del sexo?
\n Lo siguiente:
\n 1) Dios es
el Creador
del sexo. Por
lo tanto,
es un don
divino.
\n 2) El sexo
no es sucio ni
vergonzoso. Forma parte de las maravillas de nuestro
organismo.
\n 3) El propósito del sexo es triple: la reproducción,
la felicidad y la unidad del matrimonio.
\n 4) Así como el fuego puede destruir o beneficiar,
según cómo se lo utilice, el sexo puede igualmente
perjudicar o construir la vida de un muchacho o una
chica, según sean sus hábitos y su conducta.
\n 5) Para quienes piensan que la Biblia tiene relatos
pornográficos, vale la pena recordar que cada vez
que sus páginas aluden a desviaciones sexuales es
para condenarlas, o para mostrar sus consecuencias
negativas. Nunca para recomendarlas o justificarlas.
\n \n <b>2 SER HOMBRE - SER MUJER</b>
\n Uno de los sentimientos más importantes de la
felicidad es la estima propia. Es decir, aceptarse y
apreciarse uno mismo (o una misma) tal como es, con
sus virtudes y sus defectos, y procurar mejorar cada día.
\n Dios dotó al hombre y a la mujer con características
físicas y emocionales diferentes. Pero no por eso un
sexo es “fuerte” y el otro “débil”. Tampoco ambos
sexos son “opuestos”, como si fueran antagónicos,
envidiando el uno los atributos del otro. Los dos sexos
son, en realidad, “complementarios”. Y esta admirable
complementación (en la cual cada uno pone lo mejor
de sí) se logra en el matrimonio, cuando el hombre
y la mujer llegan a ser “una sola carne”, en un clima
de armonía, amor y respeto. Así lo enseña la Palabra
de Dios en Génesis 2:24; Mateo 19:5; Efesios 5:31 y
otros pasajes bíblicos.
\n \n <b>3 NOVIAZGO Y MATRIMONIO</b>
\n Con frecuencia se dice que en la hora del
casamiento se decide la suerte de los contrayentes.
\n Y aunque esto es cierto en un sentido, es más cierto
todavía que la felicidad o la desdicha del matrimonio
se decide en el mismo acto de elegir al novio o la
novia. Cuando le declaras tu amor a una chica, y ella
te acepta, en ese instante se decide el rumbo de las
dos vidas para bien o para mal, para la dicha o la desgracia
de ambos. ¿Comprendes entonces la trascendencia que
tiene esa elección?
\n Elegir mal significa sufrir las consecuencias por el resto
de la vida; o de lo contrario, interrumpir el noviazgo o el
matrimonio con sus penosas derivaciones. En cambio,
elegir bien significa descubrir la felicidad, la armonía del
amor y la certeza de la fidelidad.
\n Pero esto, que es tan fácil decirlo, es difícil lograrlo.
La realidad es que un gran número de matrimonios no
gozan de verdadera armonía. ¿La razón? Casi siempre, un
error en la elección. Tras lo cual vino después un noviazgo
defectuoso, una actitud apática, un matrimonio desavenido,
y finalmente toda una familia triste y desunida.
\n El noviazgo constituye una relación de amor. Por lo
tanto, el trato entre los novios no debería ser eclipsado
por ningún otro sentimiento, ni manejado por otro interés
que no sea la belleza del amor. El apóstol Pablo declara
que una persona podría tener muchas virtudes y poderes
espirituales, y hasta llegar al extremo de morir como
mártir. Pero si esa persona no tiene amor, de nada le sirve
todo lo demás (1 Corintios 13:1-3).
Marcelo y Norma comentaban con satisfacción:
\n “Ya tenemos todo para casarnos: el departamento, los
muebles, la heladera, el lavarropas. El mes que viene
formaremos nuestro hogar”. Y los novios se casaron.
\n Pero seis meses más tarde rompieron su matrimonio.
Ocurrió que tenían la casa bien puesta, pero olvidaron
construir el hogar. La parte material estaba muy bien,
pero Marcelo y Norma no se entendían. No pudieron vivir
en armonía. Y por fin se separaron.
\n La felicidad conyugal no depende de la belleza o la
comodidad de la casa, sino del amor y la comprensión que
exista en el corazón. Por lo tanto los novios inteligentes no
sólo velan por lo material de su futura vida matrimonial.
\n Especialmente se interesan por llevarse bien, amarse
profundamente, respetarse mutuamente y tener ideales
comunes que los lleven a convivir en armonía. Además
la felicidad comienza con la fe en Dios. Alguien dijo una
vez que un hogar excelente lo componen el esposo, la
esposa y Dios. Si el amor verdadero ocupa un lugar tan
importante en la vida de los seres humanos en general, con
mayor razón esto es cierto en la relación que mantienen un
muchacho y una chica con fines matrimoniales.
\n \n <b>4 PRUEBA DE AMOR</b>
\n ¿De qué manera se demuestra el amor durante el
noviazgo? A través de la amistad afectuosa, del gesto
cariñoso, de la atracción mutua que crece, y de la afinidad
que fusiona los dos corazones.
\n Sin embargo, no falta el novio que desea explorar en
otra dirección. Le pide a su novia que le dé la máxima“
prueba de amor”, consistente en la unión corporal.
\n Y el argumento es que así podrán conocerse mejor y
asegurar una mayor armonía matrimonial desde un mismo
comienzo. De ser cierto el argumento, esta práctica
tendría que producir matrimonios más estables, porque
los contrayentes se “conocieron” previamente. Pero ¿qué
dicen las frías estadísticas acerca de los matrimonios que
antes del casamiento practicaron esa “prueba de amor”?
\n Que tales matrimonios son los más inestables, con mayor
índice de desavenencias y de separación. Eso sin contar
que tal práctica provoca frecuentes casamientos de apuro,
amargadas madres solteras, abortos traumatizantes, diversos
tipos de enfermedades, hijos abandonados o, en el caso de la
mujer, la penosa sensación de haber sido usada como un
objeto sexual, mayormente para gratificación genital del varón.
\n Muchacha, un comentario para tu manejo personal. Si
necesitas tener alguna razón para rechazar la propuesta
de la “prueba de amor”, aquí te sugerimos cuatro. Podrías
decirle a tu novio:
\n 1) ¿Te gustaría que el novio de tu hermana le pidiera a ella
esto mismo?
\n 2) Con todo lo que nos conocemos y queremos, ¿te
parece que necesitas esto para demostrarte que te quiero?
\n 3) Si quieres que yo sea la madre de tus hijos, ¿cómo me
propones una cosa así? ¿Qué dirías si el día de mañana el
novio de nuestra hija le pidiera esto a ella?
\n 4) Tú me pides una “prueba” de mi amor. Pues, yo te pido
una “prueba” de respeto hacia mí. ¿Tú quieres usarme, o
amarme?
\n Pero si el caso fuese inverso, y fuera tu novia la que te
provoca sexualmente, ¿qué harías tú? ¿Demostrarle que eres
hombre y aceptar la provocación de ella? ¿O justamente por
ser “hombre” decirle que lo que tú quieres es una “mujer
pura” para novia y esposa y eventualmente madre.
\n ¡Cuán fácilmente un joven puede arruinar su vida por
causa de lo que aprueba al actuar de manera irreflexiva!
Que tú puedas aprobar y practicar en tu comportamiento
lo que sea noble y constructivo. ¡Entonces serás
bienaventurado(a)! Es decir, tendrás dicha y bienestar.
\n \n <b>5 POR LA FUERZA DEL CORAZÓN</b>

\n 1. Evita las malas compañías y las malas conversaciones.
“Las malas conversaciones corrompen las buenas
costumbres” (1 Corintios 15:33).
\n 2. Controla tus ojos. No te detengas en imágenes que
enciendan la imaginación inmoral. Procura ver y leer lo que
sea edificante. (2 Timoteo 2:22).
\n 3. Guarda tu lugar. Trata a tus amigos y amigas sin
provocar la tentación sensual. El autocontrol y el buen
gusto en tus maneras siempre te darán buen resultado.
\n 4. Pídele a Dios que maneje tu mente, que sea el Señor
de tu vida. Busca su ayuda divina toda vez que la necesites.
Alimenta tu alma con las palabras de la Sagrada Escritura.
\n \n <b>6 TODO TE SALDRÁ BIEN</b>

\n Hemos visto que tanto el amor como el sexo son dones
de Dios. Por lo tanto, son sagrados y deben utilizarse con
fines nobles, dentro de un marco de pureza y dignidad.
\n Así como a menudo el amor se confunde con caprichos,
celos o sensualidad, el sexo puede confundirse con pasión
erótica, placer posesivo o excitación carnal. Pero ni el uno
ni el otro funcionan sobre esa base. Ambos responden a una
motivación más profunda. Y cuando se cultivan en armonía
con la voluntad del
Creador aseguran
felicidad, paz
mental y múltiples
bendiciones divinas.
\n Tú puedes disfrutar
de la vida, y TODO
TE SALDRÁ
BIEN...
\n 1) Si tienes una visión correcta y cristiana del sexo y del amor.
\n 2) Si sabes elegir con cordura, y motivado por el amor.
\n 3) Si pides consejo a tus padres, y especialmente a Dios.
Dale un sentido espiritual a tu amor y a tu noviazgo. Esto te
mantendrá unido a Dios, y te librará de muchos errores y
problemas.
\n 4) Si amas con respeto, madurez y limpieza a la persona
con quien deseas formar una familia feliz.
\n 5) Si frente a algún retroceso o caída en tu vida pides el
perdón de Dios. El Señor es “amplio en perdonar” y siempre
nos tiende su mano paternal.
Reconocemos que tienes muchas preguntas acerca del
tema que acabamos de tratar. Te recomendamos que leas
de nuevo el capítulo. Esto te ayudará. Además, si deseas
consultarnos por escrito, gustosamente te contestaremos.
\n Lo importante es que disfrutes de una juventud sana, pulcra
y feliz, y que además te prepares para disfrutar de toda la
vida que Dios te ha dado y que tienes por delante. 

</string>
    <string name="C5_P1">
Sección 1: SEXO Y JUVENTUD
\n Los tres propósitos del sexo son:
</string>
    <string name="C5_P2">
Sección 2: SER HOMBRE - SER MUJER
\n Completa la frase: “La inversión de los
</string>
    <string name="C5_P3">
y la desdicha”.
\n Sección 3: NOVIAZGO Y MATRIMONIO
\n Completa las frases. “La felicidad o la desdicha
</string>
    <string name="C5_P4">
la novia”.
\n “La felicidad conyugal 
</string>
    <string name="C5_P5">
en el corazón”.
\n Sección 4: PRUEBA DE AMOR
\n De las cuatro razones para rechazar la propuesta de la
“prueba de amor” menciona a lo menos dos de ellas.
</string>
    <string name="C5_P6">
Sección 5: POR LA PUREZA DEL CORAZÓN
\n 1 Corintios 15:33 afirma: “No erréis, las
</string>
    <string name="C5_P7">
costumbres.”
</string>
    <string name="send_btn">
        Enviar
    </string>
</resources>